<resources>
    <string name="app_name">Project</string>

    <!-- Strings related to login -->
    <string name="ads_id">ca-app-pub-5095328269799370/5400958246</string>
    <string name="prompt_car_plate">Car Plate</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_car_plate">This car plate number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_first_screen">DoublePark</string>
    <string name="action_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="register_email">Email</string>
    <string name="prompt_contact_no">Contact Number</string>
    <string name="prompt_reenter_password">Reenter Password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_car_plate_number">Search Car Plate</string>
    <string name="notify">Notify</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="notified">Notified</string>
    <string name="action_notify_again">Notify Again</string>
    <string name="action_done">Done</string>
    <string name="notification_received">Received Notification</string>
    <string name="close">Close</string>
    <string name="action_logout">Log out</string>
    <string name="action_send">Send</string>
    <string name="notification_send">Notification sent</string>
    <string name="report">Send us some feedback or suggestions to Doublepark1018@gmail.com.</string>
    <string name="title_activity_maps">Map</string>
    <string name="aboutus">DoublePark App is here to help the community!</string>
    <string name="email_subject">DoublePark App Feedback</string>
    <string name="profile">Profile</string>
    <string name="report_title">Report</string>
    <string name="logout_confirmation">Are you sure?</string>
    <string name="logout_cancel">Cancel</string>
    <string name="history">History</string>
    <string name="aboutus_title">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">RA Inc. built the Double Park app as an Ad Supported app. This SERVICE is provided by RA Inc. at no cost and is intended for use as is.
This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Double Park unless otherwise defined in this Privacy Policy.
</string>
    <string name="information_use">Information Collection and Use</string>
    <string name="information_use_content">Information Collection and Use
    For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Name, Email, Phone Number. The information that we request is will be retained by us and used as described in this privacy policy.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
        https://www.google.com/policies/privacy/
</string>
    <string name="log_data">Log Data</string>
    <string name="log_data_content">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="cookies">Cookies</string>
    <string name="cookies_content">Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
</string>
    <string name="service_providers">Service Providers</string>
    <string name="service_providers_content">We may employ third-party companies and individuals due to the following reasons:
•	To facilitate our Service;
•	To provide the Service on our behalf;
•	To perform Service-related services; or
•	To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
</string>
    <string name="security">Security</string>
    <string name="security_content">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="link_other_sites">Links to Other Sites</string>
    <string name="link_other_sites_content">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="children_privacy">Children’s Privacy</string>
    <string name="children_privacy_content">These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
    </string>
    <string name="change_privacy_policy">Changes to This Privacy Policy</string>
    <string name="change_privacy_policy_content">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_content">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.
This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator
</string>
</resources>
