<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="rsf2.android.project.RegisterActivity"
    android:weightSum="1">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_profile"
        android:id="@+id/imageViewProfile"
        android:layout_weight="0.40"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextCarPlate"
        android:drawableLeft="@drawable/ic_car"
        android:drawableStart="@drawable/ic_car"
        android:drawablePadding="13dp"
        android:hint="@string/prompt_car_plate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextName"
        android:drawableLeft="@drawable/ic_profile"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="15dp"
        android:hint="@string/prompt_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:hint="@string/register_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextContactNo"
        android:drawableLeft="@drawable/ic_contact"
        android:drawableStart="@drawable/ic_contact"
        android:drawablePadding="15dp"
        android:hint="@string/prompt_contact_no"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:hint="@string/prompt_password"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="15dp"
        android:id="@+id/editTextReenterPassword"
        android:hint="@string/prompt_reenter_password"/>

    <Button
        android:id="@+id/buttonActionRegister"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="registerUser"
        android:layout_marginTop="10dp"
        android:text="@string/action_register"
        android:background="@drawable/rounded_button"/>
</LinearLayout>
