<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.gms.ads.AdView
        xmlns:app="http://schemas.android.com/apk/libs/com.google.ads"
        android:layout_alignParentTop="true"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ads:adUnitId="@string/ads_id"
        ads:adSize="BANNER"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_profile_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/profile_car_number"
        android:drawableLeft="@drawable/ic_car_gray"
        android:drawableStart="@drawable/ic_car_gray"
        android:drawablePadding="13dp"
        android:hint="@string/prompt_car_plate"
        android:paddingLeft="6dp"/>
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/profile_car_number"-->
        <!--android:layout_gravity="center"-->
        <!--android:textSize="28sp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--/>-->
    <EditText
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="16"
        android:id="@+id/profile_name"
        android:drawableLeft="@drawable/ic_profile_gray"
        android:drawableStart="@drawable/ic_profile_gray"
        android:drawablePadding="18dp"
        android:paddingLeft="6dp"
        />
    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:maxLines="1"-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/profile_name"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/profile_email"
        android:drawableLeft="@drawable/ic_email_gray"
        android:drawableStart="@drawable/ic_email_gray"
        android:drawablePadding="16dp"
        android:paddingLeft="6dp"
        android:hint="@string/register_email"/>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:maxLines="1"-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/profile_email"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contact_gray"
            android:padding="10dp"/>
        <Spinner
            android:id="@+id/spinner_contact_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_add_contact"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/action_add_contact"/>

        <Button
            android:id="@+id/button_update_profile"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/action_update_profile"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_logout"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_button_grey"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/action_logout"/>

</LinearLayout>

